Platform unsupported AMD RX 590 on latest 2.81 Alpha #70568

Closed
opened 2019-10-05 20:35:48 +02:00 by Ljudmila Fedorova · 7 comments

System Information
Operating system: Windows 10 1903 18362.388
Graphics card: Sapphire AMD Radeon RX 590 Pulse

Blender Version
Broken: Blender 2.81 Alpha ab519b91b2
Worked: 2.8 is working. 2.81 was working as well, but I don't remember what the version it was (I downloaded it about 3 weeks ago).

Short description of error
I was using alpha version and it worked, but then I updated it and now it isn't working. It complains about unsupported graphics card or driver, but I have the latest drivers for my RX 590.

Exact steps for others to reproduce the error

  1. Run blender 2.81 latest alpha
  2. See the error

Here is the debug log: blender_debug_output.txt

**System Information** Operating system: Windows 10 1903 18362.388 Graphics card: Sapphire AMD Radeon RX 590 Pulse **Blender Version** Broken: Blender 2.81 Alpha ab519b91b2c4 Worked: 2.8 is working. 2.81 was working as well, but I don't remember what the version it was (I downloaded it about 3 weeks ago). **Short description of error** I was using alpha version and it worked, but then I updated it and now it isn't working. It complains about unsupported graphics card or driver, but I have the latest drivers for my RX 590. **Exact steps for others to reproduce the error** 1. Run blender 2.81 latest alpha 2. See the error Here is the debug log: [blender_debug_output.txt](https://archive.blender.org/developer/F7791415/blender_debug_output.txt)

Added subscriber: @Ritsumei

Added subscriber: @Ritsumei

Added subscriber: @dark999

Added subscriber: @dark999

IMO something was go wrong on developer side, you have a GCN4 gen AMD GPU and latest Adrenalin drivers, you not should see this warning

IMO something was go wrong on developer side, you have a GCN4 gen AMD GPU and latest Adrenalin drivers, you not should see this warning

Added subscriber: @AndreasLutsch

Added subscriber: @AndreasLutsch

This is from a new update, which adds messages for unsupported and limited supported gpus.
It seems right now the newest driver is blacklisted, as it has some bugs, so you either need to revert to an older driver, an older version of 2.81 or wait until this driver version gets whitelisted or a new driver fixing the bug gets released from AMD.

This is from a new update, which adds messages for unsupported and limited supported gpus. It seems right now the newest driver is blacklisted, as it has some bugs, so you either need to revert to an older driver, an older version of 2.81 or wait until this driver version gets whitelisted or a new driver fixing the bug gets released from AMD.

This issue was referenced by 4707f1982d

This issue was referenced by 4707f1982ddbf823d8076e40fdf36fed5ab1046e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2019-10-05 23:19:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70568
No description provided.