Fix T70568, T70570: wrong AMD driver warning dialog

Remove this entry for now until we have more carefully verified the list.